# basic-hotstuff

./: Cargo.toml  README.md
consensus/: Cargo.toml
consensus/src/: aggregator.rs  commit.rs  config.rs  consensus.rs  core.rs  decide.rs  error.rs  leader.rs  lib.rs  new_view.rs  pre_commit.rs  prepare.rs  utils.rs
crypto/: Cargo.toml
crypto/src/: lib.rs
crypto/src/tests/: crypto_tests.rs
network/: Cargo.toml
network/src/: error.rs  lib.rs  msg_protocol.rs  p2p_node.rs
node/: Cargo.toml  Procfile
node/src/: config.rs  main.rs  node.rs
replica/: Cargo.toml
replica/src/: lib.rs  replica.rs  replica_api.rs
store/: Cargo.toml
store/src/: lib.rs  store.rs
