[workspace]
members = ["store", "crypto", "network", "consensus", "node", "replica"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# External dependencies
zkp = { package = "core", path = "../eon-crypto/core" }
l0 = { path = "../l0" }
blst = "0.3.16"
tokio = { version = "1.48.0", features = ["sync", "macros", "rt-multi-thread", "time", "signal", "net", "rt", "full"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
log = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.1"
futures = "0.3.28"
async-recursion = "1.0.0"
async-trait = "0.1"
base64 = "0.21"
bytes = "1.0.1"
thiserror = "1.0.21"
hex = "0.4.3"
hex_str = { version = "0.3.0", features = ["serde"] }
anyhow = "1.0.38"
rand = "0.7.3"
clap = { version = "3.2.17", features = ["derive"] }
env_logger = "0.9.0"
tokio-tungstenite = "0.20"
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.11.18", features = ["json"] }
rocksdb = "0.23.0"
libp2p = { version = "0.54", features = ["tokio", "ping", "identify", "noise", "yamux", "tcp", "request-response", "cbor"], default-features = false }
generic-array = { version = "1.3.5", default-features = false }

# Internal dependencies
store = { path = "store" }
crypto = { path = "crypto" }
network = { path = "network" }
consensus = { path = "consensus" }
replica = { path = "replica" }