[package]
name = "consensus"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
zk = { path = "../../monorepo/zk" }
l0 = { path = "../../monorepo/l0" }
blst = { git = "https://github.com/supranational/blst", branch = "master", features = ["serde", "serde-secret"] }
log = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.3.0", features = ["rt", "time", "macros", "sync"] }
bincode = "1.3.1"
futures = "0.3.8"
async-recursion = "1.0.0"
base64 = "0.21"
async-trait = "0.1.50"
bytes = "1.0.1"
thiserror = "1.0.21"
hex = "0.4.3"

store = { path = "../store" }
crypto = { path = "../crypto" }
network = { path = "../network" }
