[package]
name = "consensus"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
zkp = { workspace = true }
l0 = { workspace = true }
blst = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
bincode = { workspace = true }
futures = { workspace = true }
async-recursion = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
libp2p = { workspace = true }
anyhow = { workspace = true }

store = { workspace = true }
crypto = { workspace = true }
network = { workspace = true }
replica = { workspace = true }
