[package]
name = "crypto"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
zk = { path = "../../monorepo/zk" }
blst = { git = "https://github.com/supranational/blst", branch = "master", features = ["serde", "serde-secret"] }
tokio = { version = "1.5.0", features = ["sync", "rt", "macros"] }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21"
rand = "0.7.3"