[package]
name = "crypto"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
zkp = { workspace = true }
blst = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
generic-array = { workspace = true }
anyhow = { workspace = true }