[package]
name = "network"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
libp2p = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }