[package]
name = "node"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
zk = { path = "../../monorepo/zk" }
l0 = { path = "../../monorepo/l0" }
blst = { git = "https://github.com/supranational/blst", branch = "master", features = ["serde", "serde-secret"] }
tokio = { version = "1.1.0", features = ["time", "macros", "net", "rt-multi-thread"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
log = "0.4.0"
bytes = "1.0.1"
bincode = "1.3.1"
futures = "0.3.8"
clap = { version = "3.2.17", features = ["derive"] }
env_logger = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
rand = "0.7.3"
thiserror = "1.0.21"
anyhow = "1.0.38"
tokio-tungstenite = "0.20"
uuid = { version = "1.0", features = ["v4"] }
hex = "0.4.3"
hex_str = { version="0.3.0", features=["serde"] }

crypto = { path = "../crypto" }
store = { path = "../store" }
consensus = { path = "../consensus" }
