[package]
name = "node"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
l0 = { workspace = true }
blst = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
log = { workspace = true }
bytes = { workspace = true }
bincode = { workspace = true }
futures = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio-tungstenite = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
hex_str = { workspace = true }

crypto = { workspace = true }
store = { workspace = true }
consensus = { workspace = true }
