[package]
name = "replica"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
log = "0.4.0"
futures = "0.3.28"
async-trait = "0.1"
reqwest = { version = "0.11.18", features = ["json"] }
thiserror = "1.0.21"
tokio = { version = "1.47.1", features = ["full"] }