[package]
name = "store"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
zk = { path = "../../monorepo/zk" }
l0 = { path = "../../monorepo/l0" }
rocksdb = "0.23.0"
tokio = { version = "1.3.0", features = ["sync", "macros", "rt"] }
hex = "0.4.3"
hex_str = { version="0.3.0", features=["serde"] }
anyhow = "1.0.38"
log = "0.4.0"
async-trait = "0.1.50"