[package]
name = "store"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
l0 = { workspace = true }
rocksdb = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
hex_str = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
async-trait = { workspace = true }